test/libsolidity/syntaxTests/types/too_small_negative_numbers.sol
contract C {
  fixed8x80 a = -1e-100;
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
